--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-*{
-    clear: both;
-}
 body{
     margin: 20px;
 }
@@ -41,7 +38,7 @@ body{
     background-color: antiquewhite;
 
 }
-.text{
+.description{
     padding: 10px 0;
     max-height: 200px;
     overflow-y: scroll;
@@ -67,7 +64,7 @@ body{
     margin: 8px;
     cursor: pointer;
 }
-.status{
+.button-status{
     width: 55px;
     height: 26px;
     cursor: pointer;
