--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body{
     margin: 20px;
 }
+label{
+    color: black;
+}
 .task-manager{
     border: 1px solid black;
     width: 350px;
@@ -28,8 +31,6 @@ body{
     padding: 0 20px;
 }
 .task{
-    width: 300px;
-    min-height: 150px;
     border: 1px solid black;
     padding:  5px 20px 20px 20px;
     position: relative;
@@ -60,8 +61,8 @@ body{
     top: 0;
     margin-block-start: 0;
     margin-block-end: 0;
-    border: 1px solid black;
     margin: 8px;
+    cursor: pointer;
     cursor: pointer;
 }
 .button-status{
